# Pathtracer

./: .gitignore  .gitmodules  CMakeLists.txt
assets/: main.yaml
assets/objects/: cornell_box.mtl  teapot.mtl
assets/shaders/fragment/: bvh_node.glsl  common.incl  hit.glsl  interval.glsl  main.glsl  miss.glsl  random.glsl  ray.glsl  record.glsl  scatter.glsl  scene.glsl  send_ray.glsl  sphere.glsl  triangle.glsl
assets/shaders/vertex/: main.glsl
include/pathtracer/: app.hpp  buffer.hpp  scene.hpp  shader.hpp  vertex_array.hpp  window.hpp
src/: app.cpp  buffer.cpp  main.cpp  scene.cpp  shader.cpp  vertex_array.cpp  window.cpp
